# Lesion-Tracking

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: default_config.yaml
examples/: example_usage.py
lesion_tracker/: __init__.py  __main__.py  cli.py  core.py  labeler.py  lesion_ops.py  main.py  metrics.py  nnUNet.py  registration.py  reporting.py  tracker.py  utils.py  visualization.py  visualization_old.py
lesion_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: lesion_details.csv  report.txt  summary.json  tracking_results.json
test/: test_hungarian_tracking.py  test_regist.py
tests/: test.py
tracking_results/: lesion_details.csv  report.txt  summary.json  tracking_results.json
