[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lesion-tracker"
version = "2.0.0"
description = "Simple MS lesion tracking between baseline and follow-up MRI scans"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lesion Tracking Team"}
]
keywords = ["MRI", "lesion", "tracking", "multiple sclerosis", "neuroimaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "nibabel>=3.2.0",
    "antspyx>=0.3.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
all = [
    "lesion-tracker[viz,dev]",
]

[project.urls]
Homepage = "https://github.com/example/lesion-tracker"
Repository = "https://github.com/example/lesion-tracker"

[tool.setuptools.packages.find]
where = ["."]
include = ["lesion_tracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
